syntax = "proto3";

package rpc.user.v1;

option go_package = "rpc/user/v1";

// Haberdasher service makes hats for clients.
service UserServce {
  rpc Onboarding(UserOnboardingRequest) returns (LoginSession);
  rpc Profile(GetProfileRequest) returns (UserProfile);
  rpc UpdateProfile(UpdateProfileRequest) returns (Empty);
}

message UserOnboardingRequest {
  OTPAuth otp_auth = 1;
  string device_id = 2;
  string device_type = 3;
}

message LoginSession {
  string access_token = 1;
  int64 expired_at = 2;
}

message GetProfileRequest {
  string userID = 1;
  bool includeDevices = 2;
}

message UserProfile {
  string uuid = 1;
  string first_name = 2;
  string last_name = 3;
  string isd_code = 4;
  string mobile_no = 5;
  repeated Device devices = 6;
}

message UpdateProfileRequest {
  string uuid = 1;
  string first_name = 2;
  string last_name = 3;
}

message AuthResult {
  string token = 1;
  int64 expired_at = 2;
}

message OTPAuth{
  string token = 1;
  string code = 2;
}

message Device {
  string device_id = 1;
  string device_type = 2;
}

message Empty {}